fix fieldset icon gap

--- a/src/app/modules/deposits/deposits.component.scss
+++ b/src/app/modules/deposits/deposits.component.scss
@@ -3,7 +3,7 @@ fieldset {
 	border: 1px solid rgba($color: #999, $alpha: 0.5);
 	padding: 20px;
 	mat-icon {
-		margin-right: 10px;
+		margin-right: 6px;
 	}
 	@media only screen and (max-width: 960px) {
 		padding: 15px;
