--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -21,7 +21,7 @@ fieldset {
 	border: 1px solid rgba($color: #999, $alpha: 0.5);
 	padding: 20px;
 	mat-icon {
-		margin-right: 10px;
+		margin-right: 6px;
 	}
 	@media only screen and (max-width: 960px) {
 		padding: 15px;
@@ -38,4 +38,5 @@ fieldset {
 
 .platform {
 	margin-left: 5px;
+	font-weight: 600;
 }
